Fixes z-index of slider on home page.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -135,6 +135,11 @@ main {
     line-height: 1.5em;
 }
 
+:host /deep/ p::selection {
+  background: rgba(0,255,0,.6);
+  color: #222;
+}
+
 :host /deep/ .call-to-action {
     display: block;
     color: #fff;
@@ -155,7 +160,7 @@ main {
     }
 
     aside {
-        z-index: 5;
+        z-index: 1000;
         background: #111;
         width: 20%;
         grid-template-columns: auto;
@@ -266,6 +271,7 @@ main {
       font-size: 1em;
       line-height: 2em;
     }
+
 }
 
 @media (min-width: 768px) and (max-width: 1280px) {
